# slimeball-graphic-lib

./: CMakeLists.txt  COPYING  IDEAS.txt  README.md  SlimeballGraphicsLib-Helper-v0.0.md  ZmultiplierLib-Helper-v0.0.md
examples/: CMakeLists.txt  eg10_circle.cpp  eg13_text.cpp  eg9_scanline.cpp  new_year.cpp  parcool.cpp  test.cpp
include/: Audio.hpp  BasicUI.hpp  Canvas.hpp  Color.hpp  EntryPoint.hpp  Font.hpp  Graphics.hpp  Image.hpp  Logger.hpp  Painter.hpp  Transformation.hpp  Utils.hpp  Window.hpp
src/UI/: basicUI.cpp
src/assets/: Font.cpp  Image.cpp  Transformation.cpp  Translation.cpp
src/audio/: Audio.cpp
src/core/: Canvas.cpp  Color.cpp  EntryPoint.cpp  Logger.cpp
src/painter/: Painter.cpp
src/utils/: Utils.cpp
src/window/: Window.cpp
